[package]
name = "gx-extended-test"
version = "0.1.0"
edition = "2021"

[dependencies]
# Test cargo-toml extension by pressing gx on any dependency line
serde = "1.0"
tokio = { version = "1.28", features = ["full"] }
reqwest = "0.11"
axum = "0.6"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"
tokio-test = "0.4"
